@@ -476,12 +476,12 @@ to your misccommands.cfg or wherever you want to:
 
 define command{
         command_name    host-notify-by-noma
-        command_line    <PATH-TO-NOMA>/notifier/alert_via_noma.pl -c h -s "$HOSTSTATE$" -G "$HOSTGROUPNAMES$" -H "$HOSTNAME$" -n "$NOTIFICATIONTYPE$" -i "$HOSTADDRESS$" -o "$HOSTOUTPUT$" -t $TIMET$
+        command_line    /path_to_noma/alert_via_noma.pl -c h -s "$HOSTSTATE$" -H "$HOSTNAME$"  -G "$HOSTGROUPNAMES$" -n "$NOTIFICATIONTYPE$" -i "$HOSTADDRESS$" -o "$HOSTOUTPUT$" -t "$SHORTDATETIME$" -u "$HOSTNOTIFICATIONID$" -A "$NOTIFICATIONAUTHORALIAS$" -C "$NOTIFICATIONCOMMENT$" -R "$NOTIFICATIONRECIPIENTS$"
         }
 
 define command{
         command_name    service-notify-by-noma
-        command_line    <PATH-TO-NOMA>/notifier/alert_via_noma.pl -c s -s "$SERVICESTATE$" -G "$HOSTGROUPNAMES$" -H "$HOSTNAME$" -S "$SERVICEDESC$" -E "$SERVICEGROUPNAMES$" -o "$SERVICEOUTPUT$" -n "$NOTIFICATIONTYPE$" -a "$HOSTALIAS$" -i "$HOSTADDRESS$" -t $TIMET$
+        command_line    /path_to_noma/alert_via_noma.pl -c s -s "$SERVICESTATE$" -H "$HOSTNAME$" -G "$HOSTGROUPNAMES$" -E "$SERVICEGROUPNAMES$" -S "$SERVICEDESC$" -o "$SERVICEOUTPUT$" -n "$NOTIFICATIONTYPE$" -a "$HOSTALIAS$" -i "$HOSTADDRESS$" -t "$SHORTDATETIME$" -u "$SERVICENOTIFICATIONID$" -A "$NOTIFICATIONAUTHORALIAS$" -C "$NOTIFICATIONCOMMENT$" -R "$NOTIFICATIONRECIPIENTS$"
         }
 
 With the option -p you can force the plugin to use the pipe instead of the unix socket.  You can
@@ -801,10 +801,19 @@ To code a notification plugin, you only have to mind, that the following
 
  9. <HOST-IP>            - the host's ip address as passed on by Nagios
 
-10. <OUTPUT>             - HOSTOUTPUT or SERVICEOUTPUT, depending on the
+10. <INCIDENT ID>        - incident id, either from Icinga/Nagios or 
+			   internally generated by NoMa.
+
+11. <AUTHOR>		 - author of notification, like 
+			   acknowledgements or custom notifications.
+
+12. <COMMENT>		 - the comment in a custom notification or
+			   acknowledgement.
+
+13. <OUTPUT>             - HOSTOUTPUT or SERVICEOUTPUT, depending on the
                            check type, as passed on by Nagios
 
-11. [SERVICE]            - the service description as passed on by Nagios
+14. [SERVICE]            - the service description as passed on by Nagios
                            (only if check type is 's')
 
 
