@@ -84,6 +84,7 @@
 1.0.7 (current) - WORK IN PROGRESS
 ----------------
 * added servicegroup include and exclude filter
+* added recipient include and exclude filter - Thanks Sebastian Wolf
 * redid the notification rule's in contacts.pm
 * fixed missing hostgroup column in the SQL files for upgrading/new installation
 * added logic to sending notifications. A Contact will only get one notification per method, this to make it easier to make notification rules that may overlap, without spamming the contact excessively.
